src/assets/scss/app.scss
// Vendor components
@import "variables";
@import "bootstrap";
@import "components/layout-grid";
@import "layout-grid";
@import "slick.scss";
@import "slicktheme.scss";
@import "flexgrid.scss";

// Extensions
@import "offsets";
@import "offsets-2";
@import "fonts";
@import "typography";
@import "buttons";
@import "responsive";
@import "animations";
@import "container";

// components
@import "components/dots";
@import "components/nav-tips";
@import "components/popover";
@import "components/carousel";
@import "components/modal";
@import "components/tooltip";
@import "components/radio-button";

// pages
@import "pages/homepage";
@import "pages/pricing";
@import "pages/about";
@import "pages/successful-resumes/main";
@import "pages/text-page";
@import "pages/new-pricing";
@import "pages/404";
@import "pages/enhancv-button";
@import "pages/careers";
@import "pages/job";
@import "pages/privacy";
@import "sr-redesign/main";

// partials
@import "partials/footer";
@import "partials/example";
@import "partials/header";
@import "partials/member";
@import "partials/companies";

@import "../icons/styles.css";

html {
	scroll-behavior: smooth;
}

body {
	overflow-x: hidden;
}

body.no-scroll {
	overflow: hidden;
}

